Enable preview features in gradle build script